--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
             <div class="footer-column">
                 <h4 class="footer-title">Sản phẩm</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Ván ép phủ phim</a></li>
-                    <li><a href="#">Ván ép mặt bintangor</a></li>
-                    <li><a href="#">Ván ép mặt Okoume</a></li>
-                    <li><a href="#">Ván ép mặt trắng</a></li>
-                    <li><a href="#">Ván ép mặt xoan Veneer</a></li>
+                    <li><a href="./vn/products/film-faced.html">Ván ép phủ phim</a></li>
+                    <li><a href="./vn/products/bintagor.html">Ván ép mặt bintangor</a></li>
+                    <li><a href="./vn/products/okoume.html">Ván ép mặt Okoume</a></li>
+                    <li><a href="./vn/products/white-face.html">Ván ép mặt trắng</a></li>
+                    <li><a href="./vn/products/veneer.html">Ván ép mặt xoan Veneer</a></li>
                 </ul>
             </div>
 
@@ -451,7 +451,7 @@
             <div class="footer-column">
                 <h4 class="footer-title">Giới thiệu công ty</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Về chúng tôi</a></li>
+                    <li><a href="./vn/about/">Về chúng tôi</a></li>
                 </ul>
             </div>
         </div>
