--- a/vn/products/index.html
+++ b/vn/products/index.html
@@ -334,11 +334,11 @@
             <div class="footer-column">
                 <h4 class="footer-title">Sản phẩm</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Ván ép phủ phim</a></li>
-                    <li><a href="#">Ván ép mặt bintangor</a></li>
-                    <li><a href="#">Ván ép mặt Okoume</a></li>
-                    <li><a href="#">Ván ép mặt trắng</a></li>
-                    <li><a href="#">Ván ép mặt xoan Veneer</a></li>
+                    <li><a href="../products/film-faced.html">Ván ép phủ phim</a></li>
+                    <li><a href="../products/bintagor.html">Ván ép mặt bintangor</a></li>
+                    <li><a href="../products/okoume.html">Ván ép mặt Okoume</a></li>
+                    <li><a href="../products/white-face.html">Ván ép mặt trắng</a></li>
+                    <li><a href="../products/veneer.html">Ván ép mặt xoan Veneer</a></li>
                 </ul>
             </div>
 
@@ -363,7 +363,7 @@
             <div class="footer-column">
                 <h4 class="footer-title">Giới thiệu công ty</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Về chúng tôi</a></li>
+                    <li><a href="../about/">Về chúng tôi</a></li>
                 </ul>
             </div>
         </div>
